Added a check in namespace.xml for groups of Buffers and default-ACL. Show a warning message if they are not defined.